All: :art: Improve ChoiceMenus

--- a/src/crossword.tex
+++ b/src/crossword.tex
@@ -919,9 +919,9 @@ function printInfoText(text) {
                 \end{tcolorbox} &
                 \begin{tcolorbox}
                     \centering
-                    \ChoiceMenu[name=cmDirs, bordercolor=gray, width=1.5cm, combo]
+                    \ChoiceMenu[name=cmDirs, bordercolor=gray, width=1.5cm, combo, edit=false]
                         {Directions: \strut}{2, 4}
-                    \ChoiceMenu[name=cmWords, bordercolor=gray, width=1.5cm, combo]
+                    \ChoiceMenu[name=cmWords, bordercolor=gray, width=1.5cm, combo, edit=false]
                         {Words: \strut}{5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15}
                 \end{tcolorbox}\\[-0.3cm]
                 \PushButton[name=checkall, bordercolor=, backgroundcolor=, borderwidth=0]{
