--- a/src/particles.tex
+++ b/src/particles.tex
@@ -340,8 +340,8 @@ function moveParticles(idx) {
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \ChoiceMenu[name=particleType, width=50mm,
-                        bordercolor=white, combo
+                    \ChoiceMenu[name=particleType, width=5cm,
+                        bordercolor=gray, combo, edit=false
                     ]{Particlesystem:\strut}{Snow, Explosions}
                 \end{tcolorbox}
             \end{tabularx}
