--- a/src/match-three.tex
+++ b/src/match-three.tex
@@ -876,7 +876,7 @@ function highlightStones(m, n, enable) {
 
     % If a match is found in this direction highlight the stones
     if (countMPos > 1) {
-        for (var i = -complBoard[m][n][1][3]; i < complBoard[m][n][1][1] + 1; i++) {
+        for (var i = -complBoard[m][n][1][2]; i < complBoard[m][n][1][0] + 1; i++) {
             var tmpM = m + i;
             highlight(tmpM, n, enable);
             highlightBomb(tmpM, n, enable);
@@ -884,7 +884,7 @@ function highlightStones(m, n, enable) {
     }
     if (countNPos > 1) {
         % Just iterate from one side of the given position to the other
-        for (var i = -complBoard[m][n][1][2]; i < complBoard[m][n][1][0] + 1; i++) {
+        for (var i = -complBoard[m][n][1][3]; i < complBoard[m][n][1][1] + 1; i++) {
             var tmpN = n + i;
             highlight(m, tmpN, enable);
             highlightBomb(m, tmpN, enable);
@@ -1178,8 +1178,8 @@ function printInfoText(text) {
 
         \begin{center}
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}
-                \ChoiceMenu[name=cmSymbolC, bordercolor=gray, width=2cm, combo]{Symbol count: }%
-                    {5, 6, 7, 8} &
+                \ChoiceMenu[name=cmSymbolC, bordercolor=gray, width=2cm, combo, edit=false]
+                    {Symbol count: }{5, 6, 7, 8} &
                 \ChoiceMenu[name=cmSymbol, bordercolor=gray, radiosymbol=5, radio]{Shown symbols: }
                     {UTF8, ABC, 123}
             \end{tabularx}
