--- a/src/set.tex
+++ b/src/set.tex
@@ -25,7 +25,6 @@
 \def\boardWidth{4}
 \def\boardHeight{3}
 
-% Max playercount is 5
 \def\playerCount{5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -758,11 +757,22 @@ function printInfoText(text) {
             % Player selection buttons
             \begin{tabularx}{\textwidth}{@{} *{\playerCount}{X} @{}}%
                 \xintFor* #1 in {\xintSeq{1}{\playerCount}} \do {%
-                    \PushButton[name=player#1, bordercolor=, backgroundcolor=, borderwidth=0]{
-                        \begin{tcolorbox}
-                            \centering
+                    \PushButton[name=player#1, bordercolor=, backgroundcolor=, borderwidth=1]{
+                        \begin{tcolorbox}[left=0pt, right=0pt, halign=center]
+                            \ifdim\linewidth>30pt
+                                P%
+                            \fi%
+                            \ifdim\linewidth>50pt
+                                layer%
+                            \fi%
+                            \ifdim\linewidth>35pt
+                                \(\;\)%
+                            \fi%
+                            \ifdim\linewidth>20pt
+                            #1:%
+                            \fi%
                             \TextField[name=points#1, width=0.4cm, height=0.35cm,
-                                bordercolor=, backgroundcolor=, align=1, readonly]{Player #1:}
+                                bordercolor=, backgroundcolor=, align=1, readonly]{}
                         \end{tcolorbox}
                     }
                     % Have the cell divider for all elements
